<resources>
    <string name="app_name">Sun International University</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="submit">submit</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="teaching">Teaching</string>
    <string name="non_teaching">Non-Teaching</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">User Home</string>
    <string name="title_dashboard"> Student Attendance</string>
    <string name="title_notifications">Notifications</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>
    <string name="name_of_the_class">Name of the class :</string>
    <string name="b_sc_ag">B.sc.Ag</string>
    <string name="section">Section :</string>
    <string name="a">A</string>
    <string name="semester">semester :</string>
    <string name="faculty">Faculty :</string>
    <string name="subject">Subject :</string>
    <string name="topic">Topic :</string>
    <string name="choose_file">Choose File</string>
    <string name="note">Note</string>


    <string-array name="array_class">
        <item>Select Class</item>

    </string-array>

    <string-array name="array_section">
        <item>Select Section</item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time_table">Time Table</string>
    <string name="attendance">Attendance</string>
    <string name="enter_salary">Enter Salary</string>
    <string name="enter_date_of_join">Enter Date Of Join</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
</resources>