<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.activities.LoginActivity"
    android:padding="16dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/todo"
        android:src="@drawable/sunlogo" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:id="@+id/txtInputLayout"
        android:layout_above="@+id/spinnerLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:id="@+id/etMobile"
            android:maxLength="10"
            android:imeOptions="actionDone"
            android:hint="@string/enter_mobile_number" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/spinnerLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/bottomLayout"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/background"
        android:orientation="horizontal"
        android:weightSum="5">

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:padding="8dp"
            android:spinnerMode="dropdown" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_arrow_drop_down_24" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:cornerRadius="2dp"
            app:strokeColor="@color/purple_500"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin"
            android:text="@string/login"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="8sp"
            tools:ignore="SmallSp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegister"
            android:text="@string/registration"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="8sp"
            tools:ignore="SmallSp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnAttendance"
            android:text="@string/attendance"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:textSize="8sp"
            tools:ignore="SmallSp" />

    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress_circular"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>